terraform/modules/security_groups/main.tf
# ALB Security Group
resource "aws_security_group" "alb" {
  name        = "free9ja-${var.environment}-alb-sg"
  description = "Controls access to the ALB"
  vpc_id      = var.vpc_id

  # Allow HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound all
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "free9ja-${var.environment}-alb-sg"
    Environment = var.environment
  }
}

# ECS(Amazon Elastic Container Service) Tasks Security Group
resource "aws_security_group" "ecs" {
  name        = "free9ja-${var.environment}-ecs-sg"
  description = "Allows traffic from the ALB to the ECS tasks"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = var.app_port
    to_port         = var.app_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "free9ja-${var.environment}-ecs-sg"
    Environment = var.environment
  }
}

# RDS PostgreSQL Security Group
resource "aws_security_group" "rds" {
  name        = "free9ja-${var.environment}-rds-sg"
  description = "Allows ECS tasks to connect to the database"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "free9ja-${var.environment}-rds-sg"
    Environment = var.environment
  }
}

# ElastiCache Redis Security Group
resource "aws_security_group" "redis" {
  name        = "free9ja-${var.environment}-redis-sg"
  description = "Allows ECS tasks to connect to Redis"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "free9ja-${var.environment}-redis-sg"
    Environment = var.environment
  }
}
